feat integratio ia