@@ -1,7 +1,9 @@
 package com.example.demo.config;
 
 import com.example.demo.security.JwtFilter;
-import jakarta.servlet.Filter;
+
+import jakarta.servlet.http.HttpServletResponse;
+
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
@@ -31,25 +33,41 @@ public class SecurityConfig {
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
         http
-                .cors().and()
+                .cors(cors -> cors.configurationSource(corsConfigurationSource()))
                 .csrf(csrf -> csrf.disable())
                 .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
                 .authorizeHttpRequests(auth -> auth
+                        // ✅ Endpoints completamente públicos (sin autenticación)
                         .requestMatchers("/api/auth/**").permitAll()
-                        /* .requestMatchers("/api/**").permitAll() */
+                        .requestMatchers("/api/public/**").permitAll()
+                        .requestMatchers("/error").permitAll()
+
+                        // ✅ Endpoints de IA y predicción (públicos)
+                        .requestMatchers("/api/prediccion/**").permitAll()
+                        .requestMatchers("/api/ai/**").permitAll()
+                        .requestMatchers("/api/test/**").permitAll()
+
+                        // ✅ Endpoints con roles específicos
                         .requestMatchers("/api/insumos").hasRole("ADMINISTRADOR")
                         .requestMatchers("/api/ventanas").hasRole("CLIENTE")
                         .requestMatchers("/api/ventanaoperario").hasRole("OPERARIO")
+
+                        // Todo lo demás requiere autenticación
                         .anyRequest().authenticated())
                 .exceptionHandling(exception -> exception
                         .accessDeniedHandler((request, response, accessDeniedException) -> {
-                            response.sendError(403, "Acceso Denegado");
+                            response.setStatus(HttpServletResponse.SC_FORBIDDEN);
+                            response.setContentType("application/json");
+                            response.getWriter().write(
+                                    "{\"error\":\"Acceso Denegado\",\"message\":\"No tiene permisos para este recurso\"}");
                         })
                         .authenticationEntryPoint((request, response, authException) -> {
-                            response.sendError(401, "No Autenticado");
+                            response.setStatus(HttpServletResponse.SC_UNAUTHORIZED);
+                            response.setContentType("application/json");
+                            response.getWriter()
+                                    .write("{\"error\":\"No Autenticado\",\"message\":\"Token inválido o expirado\"}");
                         }))
-                .addFilterBefore(jwtFilter, UsernamePasswordAuthenticationFilter.class); // Filtro JWT antes del de
-                                                                                         // autenticación
+                .addFilterBefore(jwtFilter, UsernamePasswordAuthenticationFilter.class);
 
         return http.build();
     }
@@ -62,13 +80,34 @@ public class SecurityConfig {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(List.of("http://localhost:3000")); // Cambia el puerto si es necesario
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        configuration.setAllowedHeaders(List.of("*"));
-        configuration.setAllowCredentials(true); // Para enviar cookies/autenticación si es necesario
+
+        // Orígenes permitidos (agrega los que necesites)
+        configuration.setAllowedOrigins(Arrays.asList(
+                "http://localhost:3000",
+                "http://localhost:5173",
+                "http://localhost:4200"));
+
+        // Métodos HTTP permitidos
+        configuration.setAllowedMethods(Arrays.asList(
+                "GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"));
+
+        // Headers permitidos
+        configuration.setAllowedHeaders(Arrays.asList("*"));
+
+        // Permitir credenciales (cookies, headers de autorización)
+        configuration.setAllowCredentials(true);
+
+        // Headers que se pueden exponer al frontend
+        configuration.setExposedHeaders(Arrays.asList(
+                "Authorization",
+                "Content-Type"));
+
+        // Tiempo de cache para preflight (1 hora)
+        configuration.setMaxAge(3600L);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
+
         return source;
     }
 }
